# Store

./: .gitignore  pyproject.toml
store/: db.sqlite3
store/products/: models.py  urls.py  views.py
store/products/fixtures/: categories.json  goods.json
store/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_productcategory_options.py
store/products/templates/products/: base.html  index.html  products.html  test_context.html
store/store/: settings.py  urls.py
store/users/: forms.py  models.py  urls.py  views.py
store/users/migrations/: 0001_initial.py
store/users/templates/users/: base.html  login.html  register.html
