[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["a.zubchyk <Sanch13sanch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
djangorestframework = "^3.14.0"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
